[tool.poetry]
name = "palindrome-tree"
version = "1.0.0"
description = "Gradient boosted decision tree palindrome predictor, used to locate regions for further investigation thru http://palindromes.ibp.cz/"
authors = ["patrik.kaura <160702@vutbr.cz>", "jaromir.kratochvil <171433@vutbr.cz>"]

[tool.poetry.dependencies]
python = "^3.7.1"
xgboost = "^1.5.1"
pandas = "^1.3.5"
scikit-learn = "^1.0.2"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
